# ChatServer

./: .gitignore  Makefile  install-dependencies.sh
chat_app/: CMakeLists.txt
chat_app/client/: CMakeLists.txt  client.c  client.h  gui.c  gui.h  net_handler.c  net_handler.h
chat_app/common/: CMakeLists.txt  logger.c  logger.h  protocol.c  protocol.h
chat_app/server/: CMakeLists.txt  chat_handler.c  chat_handler.h  server.c  server_socket.c  server_socket.h
valgrind/: run_client_valgrind.bat  run_client_valgrind.sh  run_server_valgrind.bat  run_server_valgrind.sh
